--- a/src/CSS/Blog.css
+++ b/src/CSS/Blog.css
@@ -98,6 +98,24 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+.paginationButtons {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.paginationButton {
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #333;
+    padding: 0.5rem;
+}
+
 @media (max-width: 912px) {
     .blogContainer {
         max-width: 95%;
